--- a/styles.css
+++ b/styles.css
@@ -47,3 +47,14 @@ body {
     width: 100px;
     text-align: center;
 }
+
+#gameOverMessage {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: white;
+    font-size: 50px;
+    text-align: center;
+    display: none;
+}
